--- a/MLBankData.ipynb
+++ b/MLBankData.ipynb
@@ -638,8 +638,8 @@
    ],
    "source": [
     "dtcAccuracy = evaluator.evaluate(dtcPrediction)\n",
-    "print(\"Accuracy of LogisticRegression is = %g\"% (dtcAccuracy))\n",
-    "print(\"Test Error of LogisticRegression = %g \" % (1.0 - dtcAccuracy))"
+    "print(\"Accuracy of DecisionTreeClassifier is = %g\"% (dtcAccuracy))\n",
+    "print(\"Test Error of DecisionTreeClassifier = %g \" % (1.0 - dtcAccuracy))"
    ]
   },
   {
@@ -723,8 +723,8 @@
    ],
    "source": [
     "rfcAccuracy = evaluator.evaluate(rfcPrediction)\n",
-    "print(\"Accuracy of LogisticRegression is = %g\"% (rfcAccuracy))\n",
-    "print(\"Test Error of LogisticRegression = %g \" % (1.0 - rfcAccuracy))"
+    "print(\"Accuracy of RandomForestClassifier is = %g\"% (rfcAccuracy))\n",
+    "print(\"Test Error of RandomForestClassifier = %g \" % (1.0 - rfcAccuracy))"
    ]
   }
  ],
