--- a/MLBankData.ipynb
+++ b/MLBankData.ipynb
@@ -624,15 +624,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of LogisticRegression is = 1\n",
-      "Test Error of LogisticRegression = 0 \n"
+      "Accuracy of DecisionTreeClassifier is = 1\n",
+      "Test Error of DecisionTreeClassifier = 0 \n"
      ]
     }
    ],
@@ -709,15 +709,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of LogisticRegression is = 1\n",
-      "Test Error of LogisticRegression = 0 \n"
+      "Accuracy of RandomForestClassifier is = 1\n",
+      "Test Error of RandomForestClassifier = 0 \n"
      ]
     }
    ],
